// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (a) contract with a draft (the Save draft / Sign & send row) 1`] = `
{
  "lines": 926,
  "sha256": "7187942946247da575d29ca83316508f3c4bb539ef41c177077c7403fccbeff5",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (b1) daily-report, new report, jobsite 124 Park Slope (wttr answers) 1`] = `
{
  "lines": 1159,
  "sha256": "27905a70dbd63f8a0ca6c09590ff7a4e0b94b980ce41053973c0de1ddc020bf9",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (b2) daily-report, new report, location 'United States' 1`] = `
{
  "lines": 1159,
  "sha256": "7a4312ca798e11f02bb612b053e50eb8b806907b03763db4b52d5085d3d7cfd3",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (c1) construction-ai, tier enterprise (Code Check) 1`] = `
{
  "lines": 831,
  "sha256": "7b7ed3d63bd005b59286ad29f61b5970f3d6ca2ebe4038a7b407afa819859d97",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (c2) construction-ai, tier enterprise (Project Roadmap) 1`] = `
{
  "lines": 796,
  "sha256": "be95233f373a1bd98e50d8b7170b8ae8c7e3bf17fad4fafc1795da18ff8b25e6",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (c3) construction-ai, tier pro (Code Check) 1`] = `
{
  "lines": 834,
  "sha256": "4093d4b75019a6011b1e726e422f63cd8535211bb7bcc2b3df6eb5bb697b707e",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (d) onboarding-paywall 1`] = `
{
  "lines": 442,
  "sha256": "58ee00036870ebf610896d0deef55d7bf40c048e47e4570da529b5e58fb3a5cd",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (e) dev-ar-measure 1`] = `
{
  "lines": 2060,
  "sha256": "0e7634fd466a3d368828e04dfbef76b25661dc93ae0941208b98d3f6a79aca52",
}
`;

exports[`Z2 golden — the phone is unchanged (390 × 844 iOS) (f) WeatherRescheduleModal, fully simulated, mounted alone 1`] = `
{
  "lines": 80,
  "sha256": "0d8b5fcb91d798f8f6c43a635a88a3794e2b6220609159c87be4dde02e9768ae",
}
`;
